# cocainediesel-libs

./: .cirrus.yml  .containerignore  .gitignore  Containerfile  angelscript_linux.sh  angelscript_windows.bat  appveyor-linux.yml  appveyor-macos.yml  appveyor-windows.yml  common_linux.sh  common_macos.sh  curl_linux.sh  curl_windows.bat  discord_linux.sh  discord_macos.sh  discord_windows.bat  freetype_linux.sh  freetype_macos.sh  freetype_windows.bat  glad_linux.sh  glfw_linux.sh  glfw_macos.sh  glfw_windows.bat  librocket_linux.sh  librocket_windows.bat  luau_linux.sh  luau_macos.sh  luau_windows.bat  mbedtls_linux.sh  mbedtls_windows.bat  openal_linux.sh  openal_macos.sh  openal_windows.bat  podman.sh  sdl_linux.patch  sdl_linux.sh  sdl_macos.sh  sdl_windows.bat  tracy_linux.sh  tracy_macos.sh  (+9 more)
SDL3-3.4.4/: .git-hash  REVISION.txt
SDL3-3.4.4/include/build_config/: SDL_revision.h.cmake
discord-rpc/: CMakeLists.txt
freetype-2.11.0/: CMakeLists.txt
freetype-2.13.2/: CMakeLists.txt
freetype-2.9.1/: CMakeLists.txt
libRocket/: .gitignore
libRocket/Source/Core/: Context.cpp  Core.cpp  Element.cpp  ElementStyle.cpp  ElementStyle.h  ElementUtilities.cpp  FontProviderInterface.cpp  PropertyDefinition.cpp  PropertyParserNumber.cpp  PropertyParserTransform.cpp  RenderInterface.cpp  StyleSheetSpecification.cpp  SystemInterface.cpp  (+3 more)
luau-0.512/: CMakeLists.txt
mbedtls-3.2.1/: CMakeLists.txt
mbedtls-3.5.1/docs/: requirements.txt
yoga-1.19.0/: CMakeLists.txt
yoga-1.19.0/yoga/: Yoga.cpp
yoga-2.0.1/: CMakeLists.txt
zig-cmake/: ar  download_zig.sh  ranlib
(+1 files in other folders)
